<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="10dp"
    app:cardCornerRadius="26dp"
    android:layout_margin="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/icon_download"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.153" />

        <TextView
            android:id="@+id/item_name"
            style="@style/Widget.Inventory.ListItemTextView"
            android:layout_width="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_icon"
            app:layout_constraintTop_toTopOf="@+id/iv_icon"
            tools:text="@string/item" />

        <TextView
            android:id="@+id/item_price"
            style="@style/Widget.Inventory.ListItemTextView"
            android:layout_width="100dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-medium"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_icon"
            app:layout_constraintTop_toBottomOf="@+id/item_name"
            app:layout_constraintVertical_bias="0.0"
            tools:text="500 som" />


        <Button
            android:id="@+id/btn_add"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/add"
            app:layout_constraintStart_toEndOf="@+id/iv_icon"
            app:layout_constraintTop_toTopOf="@+id/item_quantity" />

        <TextView
            android:id="@+id/item_quantity"
            style="@style/Widget.Inventory.ListItemTextView"
            android:layout_width="50dp"
            android:layout_marginStart="8dp"
            android:fontFamily="sans-serif-medium"

            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@+id/btn_add"
            app:layout_constraintTop_toBottomOf="@+id/item_price"
            tools:text="3" />

        <Button
            android:id="@+id/btn_remove"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/remove"
            app:layout_constraintStart_toEndOf="@+id/item_quantity"
            app:layout_constraintTop_toBottomOf="@+id/item_price" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>